--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ nav a:hover{
     text-decoration: underline;
 }
 
-main form button[type=submit]
+main form button[type=submit],main form input[type=submit]
 {
     padding:5px 15px;
        background:rgba(43, 62, 222, 0.487);
